syntax="proto3";

option java_multiple_files=true;

message FileName{
  string fileName = 1;
}
message FileContent{
  string fileContent = 1;
}
service FileServer{
  rpc getFileContent(FileName) returns (FileContent){};
}